[package]
name = "nsdgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
clap = { version = "4.3.4", features = ["derive"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
strip = true
