[package]
name = "nsdgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
flate2 = "1.0.26"
image = "0.24.6"
thousands = "0.2.0"
threadpool = "1.8.1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
strip = true
